--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme = "dark" >
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -12,8 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Sora:wght@100..800&display=swap" rel="stylesheet">
     
   </head>
-  <body class="manrope-font">
-    <div id="root"></div>
+  <body class="manrope-font overflow-scroll" >
+    <div id="root" class="w-[80%] mx-auto"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
